--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 html {
   box-sizing: border-box;
 }
@@ -66,29 +69,26 @@ body {
   background: black;
 }
 
-.spinner,
-.spinner:after {
-  border-radius: 50%;
-  width: 5em;
-  height: 5em;
-}
-.spinner {
-  margin: 10px;
-  font-size: 10px;
+
+.progress {
+  background-color: #d8d8d8;
+  border-radius: 20px;
   position: relative;
-  text-indent: -9999em;
-  border-top: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-right: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
-  border-left: 1.1em solid #ffffff;
-  transform: translateZ(0);
-  animation: spinner-spin 1.1s infinite linear;
+  height: 30px;
+  width: 300px;
 }
-@keyframes spinner-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
+
+.progress-done {
+  background: linear-gradient(to left, #F2709C, #FF9472);
+  box-shadow: 0 3px 3px -5px #F2709C, 0 2px 5px #F2709C;
+  border-radius: 20px;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 0;
+  opacity: 0;
+  transition: 1s ease 0.3s;
 }
+
